ROO-287: Add third-party add-on creation and management infrastructure